# Rust-CLI-cryotocurrency-details-fetcher

./: .gitattributes  Cargo.toml
src/: main.rs
