[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
colored = "3.0.0"
confy = "2.0.0"
indicatif = "0.18.2"
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["blocking", "json", "rustls-tls"] }
serde = "1.0.228"
serde_json = "1.0.145"
